@@ -24,4 +24,7 @@ const char *http_method_to_string_data[HTTP_METHOD_INVALID] = {
 
     /* RFC 5789 */
     [HTTP_METHOD_PATCH] = "PATCH",
+
+    /* Versioning Extensions to WebDAV methods (RFC3253) */
+    [HTTP_METHOD_REPORT] = "REPORT",
 };
